# Enterprise-Ai

./: .env.example  .gitignore  .prettierrc  README.md  docker-compose.yml  render.yaml  ruff.toml
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
backend/api/: __init__.py  routes.py
backend/api/v1/: __init__.py  analytics.py  auth.py  chat.py  documents.py  guardrails.py  health.py  settings.py  users.py  version.py
backend/auth/: __init__.py  departments.py  jwt.py  password.py  rbac.py  roles.py
backend/core/: __init__.py  app_factory.py  config.py  dependencies.py  exceptions.py  logging.py
backend/database/: __init__.py  mongo.py
backend/evaluation/: __init__.py
backend/guardrails/: __init__.py  engine.py
backend/middleware/: __init__.py  exception_handler.py  rate_limit.py  request_id.py  timing.py
backend/models/: __init__.py  audit.py  conversation.py  document.py  user.py
backend/monitoring/: __init__.py
backend/rag/: __init__.py  pipeline.py
backend/rag/embeddings/: __init__.py  (+1 more)
backend/repositories/: __init__.py  audit_repository.py  base.py  conversation_repository.py  document_repository.py  user_repository.py
backend/schemas/: auth.py  common.py  conversation.py  document.py  user.py
backend/scripts/: seed_db.py
backend/services/: __init__.py  analytics_service.py  auth_service.py  chat_service.py  document_service.py  settings_service.py  user_service.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_documents.py  test_health.py  test_rbac.py
backend/utils/: __init__.py  pagination.py
(+88 files in other folders)
