[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "enterprise-ai-assistant-backend"
version = "1.0.0"
description = "Enterprise AI Knowledge Assistant — FastAPI Backend (MongoDB + ChromaDB)"
requires-python = ">=3.11"
license = { text = "Proprietary" }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html:coverage_html",
    "-v",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_any_generics = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    ".venv/*",
    "scripts/*",
]

[tool.coverage.report]
fail_under = 60
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
